--- a/main.html
+++ b/main.html
@@ -4,10 +4,63 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+    .hero {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .hero img {
+      width: 600px;
+      height: 400px;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+
+    .hero-content {
+      margin-left: 40px;
+      max-width: 300px;
+    }
+
+    .hero-content h1 {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .hero-content p {
+      margin-bottom: 20px;
+      color: #555;
+    }
+
+    .hero-content a {
+      display: inline-block;
+      padding: 10px 15px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    body {
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero">
+  <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb" alt="Nature Image">
+  <div class="hero-content">
+    <h1>Welcome to my Pinterest clone</h1>
+    <p>Discover new inspiration and save your favorite ideas</p>
+    <a href="#">Explore now</a>
+  </div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
